--- a/Projecte-1/Capa_Vista/src/org/milaifontanals/vista/Productes_Vista.form
+++ b/Projecte-1/Capa_Vista/src/org/milaifontanals/vista/Productes_Vista.form
@@ -95,25 +95,18 @@
                           <EmptySpace type="separate" max="-2" attributes="0"/>
                           <Component id="Netejar_BT" min="-2" pref="53" max="-2" attributes="0"/>
                       </Group>
-                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                          <Group type="102" alignment="0" attributes="0">
-                              <Component id="ID_etiqueta" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace type="separate" max="-2" attributes="0"/>
-                              <Component id="ID_field" min="-2" pref="108" max="-2" attributes="0"/>
-                          </Group>
-                          <Group type="102" alignment="0" attributes="0">
-                              <Component id="Titol_etiqueta" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                              <Component id="Titol_field" max="32767" attributes="0"/>
-                          </Group>
-                          <Group type="102" alignment="0" attributes="0">
-                              <Component id="Estat_etiqueta" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                              <Group type="103" groupAlignment="0" attributes="0">
-                                  <Component id="Inactiu_RB" min="-2" max="-2" attributes="0"/>
-                                  <Component id="Actiu_RB" min="-2" max="-2" attributes="0"/>
-                                  <Component id="Tots_RB" alignment="0" min="-2" max="-2" attributes="0"/>
-                              </Group>
+                      <Group type="102" alignment="0" attributes="0">
+                          <Component id="Titol_etiqueta" min="-2" max="-2" attributes="0"/>
+                          <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                          <Component id="Titol_field" min="-2" pref="107" max="-2" attributes="0"/>
+                      </Group>
+                      <Group type="102" alignment="0" attributes="0">
+                          <Component id="Estat_etiqueta" min="-2" max="-2" attributes="0"/>
+                          <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                          <Group type="103" groupAlignment="0" attributes="0">
+                              <Component id="Inactiu_RB" min="-2" max="-2" attributes="0"/>
+                              <Component id="Actiu_RB" min="-2" max="-2" attributes="0"/>
+                              <Component id="Tots_RB" alignment="0" min="-2" max="-2" attributes="0"/>
                           </Group>
                       </Group>
                       <Group type="102" alignment="0" attributes="0">
@@ -138,12 +131,7 @@
         <DimensionLayout dim="1">
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
-                  <EmptySpace min="-2" pref="24" max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="ID_etiqueta" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="ID_field" alignment="3" min="-2" max="-2" attributes="0"/>
-                  </Group>
-                  <EmptySpace type="separate" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="59" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="Titol_etiqueta" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="Titol_field" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -182,11 +170,6 @@
         </DimensionLayout>
       </Layout>
       <SubComponents>
-        <Component class="javax.swing.JLabel" name="ID_etiqueta">
-          <Properties>
-            <Property name="text" type="java.lang.String" value="ID: "/>
-          </Properties>
-        </Component>
         <Component class="javax.swing.JLabel" name="Titol_etiqueta">
           <Properties>
             <Property name="text" type="java.lang.String" value="T&#xed;tol: "/>
@@ -202,11 +185,6 @@
             <Property name="text" type="java.lang.String" value="Tipus: "/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JTextField" name="ID_field">
-          <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="ID_fieldActionPerformed"/>
-          </Events>
-        </Component>
         <Component class="javax.swing.JTextField" name="Titol_field">
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="Titol_fieldActionPerformed"/>
@@ -221,10 +199,9 @@
           <Properties>
             <Property name="maximumRowCount" type="int" value="100"/>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="1">
-                <StringItem index="0" value=""/>
-              </StringArray>
+              <StringArray count="0"/>
             </Property>
+            <Property name="toolTipText" type="java.lang.String" value=""/>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="Estil_comboActionPerformed"/>
@@ -297,6 +274,9 @@
               <Image iconType="3" name="/org/milaifontanals/Imatges/icons8-erase-32.png"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="Netejar_BTActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
@@ -383,6 +363,9 @@
               <Image iconType="3" name="/org/milaifontanals/Imatges/icons8-add-file-16.png"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="Afegir_BTActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel2">
           <Properties>
